Fix the investment accounts handling in the institutions view. Make the investment accounts the only accounts that are added to their parent in the institutions view. The rest of the accounts are added at the first level because they don't inherit the institution from their parent. Thanks to Allen for working on this.

BUG: 309105